--- a/css/style.css
+++ b/css/style.css
@@ -382,3 +382,37 @@ color: #757095;
   background-position:top right;
 }
 
+
+/* section cta */
+
+.cta .container{
+  width: 1044px;
+  height: 196px;
+  background: #F8F9FD;
+  border-radius: 10px;
+}
+
+.cta__info{
+  display: grid;
+  grid-template-columns: 70% 30%;
+  gap: 85px;
+  padding: 38px 70px;
+  align-items: center;
+ 
+}
+
+.cta__title{
+  font-weight: 800;
+font-size: 36px;
+line-height: 56px;
+letter-spacing: -0.03em;
+color: #000000;
+}
+.cta__btn{
+  width: 181px;
+  height: 60px;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  padding-top: -5px;
+}
