--- a/css/style.css
+++ b/css/style.css
@@ -58,16 +58,17 @@ body {
 }
 /* ## END RESET ##  */
 /* ## HEADER */
-.main-header .hcontainer {
+.container {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  margin-bottom:100px;
 }
 .flex-container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
  }
 
  .main-header {
@@ -115,8 +116,9 @@ body {
 
 /* section hero*/
 
-.container {
-  max-width: 1016px;
+.hero .container {
+  width: 1179px;
+  height: 537px;
   width: 100%;
   height: 438px;
   margin: 0 auto;
@@ -415,4 +417,71 @@ color: #000000;
   line-height: 19px;
   text-align: center;
   padding-top: -5px;
+}
+
+
+/* section content */
+
+
+.content .container{
+  display: grid;
+  grid-template-columns: 40% 60%;
+  gap:200px;
+}
+
+
+.content img{
+  width: 775.22px;
+  height: 737px;
+}
+
+
+.content__info{
+  width: 499.75px;
+  height: 482.48px;
+  margin-top: 110px;
+ 
+  
+}
+.content__subtitle{
+  font-weight: 700;
+font-size: 14px;
+line-height: 17px;
+text-transform: uppercase;
+color: #3734A9;
+margin-bottom: 15px;
+}
+.content__title{
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 60px;
+  letter-spacing: -0.03em;
+  color: #000000;
+  margin-bottom: 29px;
+}
+.content__text{
+  font-weight: 500;
+font-size: 18px;
+line-height: 30px;
+letter-spacing: -0.02em;
+color:#64607D;
+margin-bottom: 10px;
+}
+
+
+
+.content__list{
+  line-height: 30px;
+
+}
+
+.content__li::before{
+  content: " ";
+    background: url('../assets/lilogo.png') no-repeat center;
+    background-size: 100%;
+  
+    width: 24.48px;
+    height: 24.69px;
+    display: inline-block;
+  
 }
